website/src/css/custom.scss
@import '_buttons.scss';
@import '_headers.scss';

:root {
  --ifm-color-primary: var(--verdaccio-color);
  --ifm-color-primary-dark: #44553a;
  --ifm-color-primary-darker: #415036;
  --ifm-color-primary-darkest: #35422d;
  --ifm-color-primary-light: #546746;
  --ifm-color-primary-lighter: #576c4a;
  --ifm-color-primary-lightest: #637a53;

  /* custom palette */
  --dark-blue: #004074;
  --grey: #f2f3f2;
  --grey-darker: #b7b7b7;
  --grey-light: #f7f7f7;
  --grey-lighter: #f9f9f9;
  --verdaccio-color: #4a5e3e;
  --twitter-color: #1595de;
  --red: #cd4001;
  --p-color: #5c5c5c;

  --ifm-code-font-size: 95%;
}

html[data-theme='dark']:root {
  --ifm-color-primary: var(--red);
  --ifm-color-primary-dark: #b93a01;
  --ifm-color-primary-darker: #ae3601;
  --ifm-color-primary-darkest: #902d01;
  --ifm-color-primary-light: #e24601;
  --ifm-color-primary-lighter: #ec4a01;
  --ifm-color-primary-lightest: #fe580e;

  --ifm-navbar-background-color: #061a38;
  --ifm-dropdown-background-color: #061a38;
  --ifm-global-shadow-lw: 0 1px 2px 0 rgba(255, 255, 255, 0.173);
  --ifm-navbar-shadow: var(--ifm-global-shadow-lw);

  --grey-lighter: #041329;
  --p-color: #b7b7b7;
  --verdaccio-color: #fff;
  --grey: #f3f3f338;
}

div[role='banner'] {
  background-color: var(--ifm-navbar-background-color);
  color: var(--p-color);
}

.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link:before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

::-moz-selection {
  color: var(--ifm-color-white);
  background: var(--verdaccio-color);
}

a:hover {
  color: var(--ifm-color-primary);
}

::selection {
  color: var(--ifm-color-white);
  background: var(--verdaccio-color);
}

.main-wrapper {
  background-color: var(--grey-lighter);
}

a[aria-current='page'] {
  /* important because text-decoration none on hover */
  text-decoration: underline !important;
  text-underline-position: under;
  color: var(--verdaccio-color);
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] {
  .header-github-link:before {
    filter: invert(1);
  }

  .footer--dark {
    --ifm-footer-background-color: #061a38;
  }

  .docusaurus-highlight-code-line {
    background-color: rgba(0, 0, 0, 0.3);
  }
}

.opacity-0 {
  opacity: 0;
}

